--- a/fab.html
+++ b/fab.html
@@ -1,1 +1,1 @@
-<a href="https://discord.com/invite/6rpsR6pnbq" target="_blank"><button type="button" class="btn btn-info">Help Koza tier! <i class="bi bi-discord"></i></button></a>
+<a href="https://koza.rip/discord" target="_blank"><button type="button" class="btn btn-info">Help Sven tier! <i class="bi bi-discord"></i></button></a>
