--- a/fav/bandori/cards/index.html
+++ b/fav/bandori/cards/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>KOZA.RIP - Bandori Favorites: Cards</title>
+  <title>SVENXIETY.XYZ - Bandori Favorites: Cards</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="https://koza.rip/assets/img/favicon.ico" rel="icon">
-  <link href="https://koza.rip/assets/img/favicon.ico" rel="apple-touch-icon">
+  <link href="https://svenxiety.xyz/assets/img/favicon.ico" rel="icon">
+  <link href="https://svenxiety.xyz/assets/img/favicon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,15 +19,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="https://koza.rip/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://koza.rip/assets/css/main.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/css/custom.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/css/main.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/css/custom.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: PhotoFolio - v1.2.0
@@ -61,56 +61,42 @@
     </div><!-- End Page Header -->
 
     <!-- ======= Gallery Section ======= -->
-    <section id="gallery-kanon" class="gallery">
+    <section id="gallery-ran" class="gallery">
       <div class="container-fluid" data-aos="fade-up">
         <div class="section-header">
-          <h2>Kanon Matsubara</h2>
+          <h2>Ran Mitake</h2>
         </div>
 
         <div id="loader" style="display: none; text-align: center;">Loading...</div>
-        <div id="cards-kanon" class="row gy-4 justify-content-center">
+        <div id="cards-ran" class="row gy-4 justify-content-center">
 
         </div>
 
       </div>
     </section><!-- End Gallery Section -->
 
-    <section id="gallery-hagumi" class="gallery">
+    <section id="gallery-layer" class="gallery">
       <div class="container-fluid" data-aos="fade-up">
         <div class="section-header">
-          <h2>Hagumi Kitazawa</h2>
+          <h2>LAYER (Rei Wakana)</h2>
         </div>
 
         <div id="loader" style="display: none; text-align: center;">Loading...</div>
-        <div id="cards-hagumi" class="row gy-4 justify-content-center">
+        <div id="cards-layer" class="row gy-4 justify-content-center">
 
         </div>
 
       </div>
     </section><!-- End Gallery Section -->
 
-    <section id="gallery-nanami" class="gallery">
+    <section id="gallery-tae" class="gallery">
       <div class="container-fluid" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Nanami Hiromachi</h2>
+          <h2>Tae Hanazono</h2>
         </div>
         <div id="loader" style="display: none; text-align: center;">Loading...</div>
-        <div id="cards-nanami" class="row gy-4 justify-content-center">
-
-        </div>
-
-      </div>
-    </section><!-- End Gallery Section -->
-
-    <section id="gallery-yukilisa" class="gallery">
-      <div class="container-fluid" data-aos="fade-up">
-
-        <div class="section-header">
-          <h2>Yukina Minato & Lisa Imai</h2>
-        </div>
-        <div id="loader" style="display: none; text-align: center;">Loading...</div>
-        <div id="cards-yukilisa" class="row gy-4 justify-content-center">
+        <div id="cards-tae" class="row gy-4 justify-content-center">
 
         </div>
 
@@ -149,22 +135,22 @@
 
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-  <script src="https://koza.rip/assets/js/nav.js"></script> <!-- nav loader -->
-  <script src="https://koza.rip/assets/js/foot.js"></script> <!-- footer loader -->
-  <script src="https://koza.rip/assets/js/fab.js"></script> <!-- fab loader -->
+  <script src="https://svenxiety.xyz/assets/js/nav.js"></script> <!-- nav loader -->
+  <script src="https://svenxiety.xyz/assets/js/foot.js"></script> <!-- footer loader -->
+  <script src="https://svenxiety.xyz/assets/js/fab.js"></script> <!-- fab loader -->
 
   <!-- Vendor JS Files -->
-  <script src="https://koza.rip/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://koza.rip/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="https://koza.rip/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="https://koza.rip/assets/vendor/aos/aos.js"></script>
-  <script src="https://koza.rip/assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/aos/aos.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/php-email-form/validate.js"></script>
 
   <script src="/assets/vendor/papaparse.min.js"></script>
-  <script src="https://koza.rip/assets/js/cards_bandori.js"></script>
+  <script src="https://svenxiety.xyz/assets/js/cards_bandori.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="https://koza.rip/assets/js/main.js"></script>
+  <script src="https://svenxiety.xyz/assets/js/main.js"></script>
 
 </body>
 
