--- a/fav/bandori/index.html
+++ b/fav/bandori/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>KOZA.RIP - Bandori Favorites: Overall</title>
+  <title>SVENXIETY.XYZ - Bandori Favorites: Overall</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="https://koza.rip/assets/img/favicon.ico" rel="icon">
-  <link href="https://koza.rip/assets/img/favicon.ico" rel="apple-touch-icon">
+  <link href="https://svenxiety.xyz/assets/img/favicon.ico" rel="icon">
+  <link href="https://svenxiety.xyz/assets/img/favicon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,15 +19,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="https://koza.rip/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://koza.rip/assets/css/main.css" rel="stylesheet">
-  <link href="https://koza.rip/assets/css/custom.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/css/main.css" rel="stylesheet">
+  <link href="https://svenxiety.xyz/assets/css/custom.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: PhotoFolio - v1.2.0
@@ -167,18 +167,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Koza</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
-        Template by <a href="https://bootstrapmade.com/">BootstrapMade</a>. Modified by <a href="https://svenxiety.xyz">Sven</a>.
-      </div>
-    </div>
+
   </footer><!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -189,22 +178,22 @@
 
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-  <script src="https://koza.rip/assets/js/nav.js"></script> <!-- nav loader -->
-  <script src="https://koza.rip/assets/js/foot.js"></script> <!-- footer loader -->
-  <script src="https://koza.rip/assets/js/fab.js"></script> <!-- fab loader -->
+  <script src="https://svenxiety.xyz/assets/js/nav.js"></script> <!-- nav loader -->
+  <script src="https://svenxiety.xyz/assets/js/foot.js"></script> <!-- footer loader -->
+  <script src="https://svenxiety.xyz/assets/js/fab.js"></script> <!-- fab loader -->
 
   <!-- Vendor JS Files -->
-  <script src="https://koza.rip/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://koza.rip/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="https://koza.rip/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="https://koza.rip/assets/vendor/aos/aos.js"></script>
-  <script src="https://koza.rip/assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/aos/aos.js"></script>
+  <script src="https://svenxiety.xyz/assets/vendor/php-email-form/validate.js"></script>
 
   <script src="/assets/vendor/papaparse.min.js"></script>
-  <script src="https://koza.rip/assets/js/fav_bandori.js"></script>
+  <script src="https://svenxiety.xyz/assets/js/fav_bandori.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="https://koza.rip/assets/js/main.js"></script>
+  <script src="https://svenxiety.xyz/assets/js/main.js"></script>
 
 </body>
 
