--- a/nav.html
+++ b/nav.html
@@ -71,14 +71,14 @@
         <ul>
           <li class="dropdown"><a href="#"><span>Bandori</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="https://koza.rip/trackers/cd/bandori/">CD Singles & Albums</a></li>
+              <li><a href="https://tracker.koza.rip/cd/bandori/">CD Singles & Albums</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Proseka</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="https://koza.rip/trackers/cards/proseka/en/">Cards (EN)</a></li>
-              <li><a href="https://koza.rip/trackers/cards/proseka/jp/">Cards (JP)</a></li>
-              <li><a href="https://koza.rip/trackers/cd/proseka/">CD Singles & Albums</a></li>
+              <li><a href="https://tracker.koza.rip/cards/proseka/en/">Cards (EN)</a></li>
+              <li><a href="https://tracker.koza.rip/cards/proseka/jp/">Cards (JP)</a></li>
+              <li><a href="https://tracker.koza.rip/cd/proseka/">CD Singles & Albums</a></li>
             </ul>
           </li>
         </ul>
