Added new social links

--- a/nav.html
+++ b/nav.html
@@ -89,7 +89,8 @@
   <div class="header-social-links">
     <a href="https://twitter.com/svenxiety" class="twitter"><i class="bi bi-twitter"></i></a>
     <a href="https://instagram.com/svenxiety" class="instagram"><i class="bi bi-instagram"></i></a>
-    <a href="https://nightcord.de/@synthsloth" class="mastodon"><i class="bi bi-mastodon"></i></a>
+    <a rel="me" href="https://nightcord.de/@synthsloth" class="mastodon"><i class="bi bi-mastodon"></i></a>
+    <a href="https://bsky.app/profile/synthsloth.bsky.social" class="bluesky"><i class="bi bi-cloudy-fill"></i></a>
   </div>
   <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
   <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
