--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <!-- mastodon verification -->
+  <link rel="me" href="https://nightcord.de/@synthsloth">
+
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
   <link href="assets/img/favicon.ico" rel="apple-touch-icon">
